<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb">
    <android.support.v7.widget.Toolbar

        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        app:contentInsetStart="0dp"
        android:paddingTop="@dimen/toolbar_padding_top"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="#FFFFFF">
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageButton
                android:id="@+id/return_btn"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:maxWidth="200dp"
                android:ellipsize="end"
                android:textColor="#5F5F5F"
                android:text="@string/app_name"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/switch_btn"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/swicher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4dp" >

            <Button
                android:id="@+id/btn_set_mode_voice"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/icon_chat_voice"
                android:onClick="setModeVoice"
                android:visibility="visible" />
            <Button
                android:id="@+id/btn_set_mode_keyboard"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/chatting_setmode_keyboard_btn"
                android:onClick="setModeKeyboard"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/btn_press_to_speak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@drawable/chat_press_speak_btn"
                android:gravity="center"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/button_pushtotalk"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/edittext_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:gravity="bottom" >

                <com.iflytek.widget.PasteEditText
                    android:id="@+id/et_sendmessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:maxLines="3"
                    android:minHeight="40dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingTop="3dp"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="60dp"
                android:layout_height="32dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/chat_send_btn_selector"
                android:text="@string/button_send"
                android:onClick="onClick"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#C0C0C0" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bar_bottom"
        android:layout_below="@id/top_bar" >

        <ProgressBar
            android:id="@+id/pb_load_more"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/pb_load_more"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:dividerHeight="5dp"
            android:listSelector="#00000000"
            android:scrollbarStyle="outsideOverlay"
            android:transcriptMode="normal" />

        <RelativeLayout
            android:id="@+id/recording_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/recording_hint_bg"
            android:padding="10dp"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/mic_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/record_animate_01" />

            <TextView
                android:id="@+id/recording_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mic_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/move_up_to_cancel"
                android:textSize="10sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
